<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.studying.studies.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/mix_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/mix_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/hello_string"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="191dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/world_string"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="191dp" />

</LinearLayout>
