<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#ecedef"
    android:orientation="vertical"
    tools:context="com.example.studying.studies.dz1.Dz1Activity"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:text="@string/hello_string"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:text="@string/world_string"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="191dp" />

    <Button
        style="@style/loginButton"
        android:id="@+id/mix_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/mix_button" />

</LinearLayout>
