<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:hint="@string/dz3image"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dz2_start_end_padding" />
                        <Button
                            android:layout_width="120dp"
                            android:layout_height="80dp"
                            android:background="@drawable/buttton"
                            android:text="@string/dz3Button"
                            android:textColor="#ffffff"
                            android:textSize="20sp"
                            android:id="@+id/button"
                            android:layout_gravity="center"/>
                        <ImageView
                            android:id="@+id/myImageView"
                            android:layout_width="400dp"
                            android:layout_height="400dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/dz3imageDescription" />
                        <TextView
                            android:id="@+id/buildConfigText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="18sp" />
                </LinearLayout>
        </ScrollView>
</LinearLayout>